[package]
name = "personal-tools"
version = "0.1.0"
authors = ["Michael McClimon <michael@mcclimon.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
termcolor = "1.4.1"

[[bin]]
name = "git-prompt-info"
